User profile backend (#73)
* initial set-up

* swagger added

* tests passed

* fixed typo

* fixed some mistakes mentioned in the comments

* copy frontend yarn lock in the main to this
